<resources>
    <string name="app_name">Module 4 Homework</string>
    <string name="message_happy">Have yourself a merry little Christmas, Let your heart be light, From now on our troubles will be out of sight.</string>
    <string name="message_merry_christmas">Have yourself a merry little Christmas  Let your heart be light  From now on, our troubles will be out of sight</string>
    <string name="challenge_1">Challenge 1</string>
    <string name="challenge_2">Challenge 2</string>
    <string name="challenge_4">Challenge 4</string>
    <string name="extra_challenge">Extra Challenge</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="image">image</string>
    <string name="beauty_and_the_beast">Beauty and the \nBeast</string>
    <string name="march_2017_pg_129_minutes">March 2017 PG 129 minutes</string>
    <string name="rent_from_r29_99">RENT FROM R29,99</string>
    <string name="buy_from_r127_99">BUY FROM R127,99</string>
    <string name="_4_5">4.5</string>
    <string name="_242_ratings">242 ratings</string>
    <string name="family">Family</string>
    <string name="story">The story and characters you know\n and love come to spectacular life in\n the live-action adaptation of Disney’s\n animated classic Beauty and the \nBeast</string>
</resources>
