<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExtraChallenge">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:text="@string/beauty_and_the_beast"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="428dp"
            android:layout_height="250dp"
            app:srcCompat="@drawable/beauty_header"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="176dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:srcCompat="@drawable/beauty_poster"
            tools:layout_editor_absoluteY="175dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="38dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:srcCompat="@drawable/android_1"
            tools:srcCompat="@drawable/image6" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="210dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/march_2017_pg_129_minutes"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <View
            android:id="@+id/view"
            android:layout_width="354dp"
            android:layout_height="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="#F2EFF2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            tools:layout_editor_absoluteY="444dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="176dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rent_from_r29_99"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <View
            android:id="@+id/view2"
            android:layout_width="354dp"
            android:layout_height="4dp"
            android:background="#F2EFF2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            tools:layout_editor_absoluteY="566dp" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="176dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/buy_from_r127_99"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/image7"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="465dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/_4_5"
            android:textAlignment="center"
            android:textColor="@color/white_color"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:srcCompat="@drawable/image4" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/image2" />

        <ImageView
            android:id="@+id/imageView12"
            style="app"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:srcCompat="@drawable/image1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_242_ratings"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="37dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="8dp"
            android:text="@string/family"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="8dp"
            android:text="71%"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="8dp"
            android:text="Similar"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="355dp"
            android:layout_height="121dp"
            android:text="@string/story"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="583dp" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>